<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9D1D8"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="103dp"
        android:layout_height="67dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/salvar"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/button3"
        android:layout_width="215dp"
        android:layout_height="52dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/confirmar"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.602" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText2"
        android:layout_width="332dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:hint="@string/digite_seu_e_mail"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.044" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText"
        android:layout_width="333dp"
        android:layout_height="57dp"
        android:layout_marginTop="136dp"
        android:hint="@string/digite_sua_idade"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="303dp"
        android:layout_height="51dp"
        android:fontFamily="monospace"
        android:text="@string/aplicativo_lista_vip_curso_android"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:hint="@string/digite_seu_nome"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/button"
        android:layout_width="104dp"
        android:layout_height="69dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/limpar"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.018" />

</androidx.constraintlayout.widget.ConstraintLayout>